Closed Bug 311430 Opened 20 years ago Closed 20 years ago

No longer firing EVENT_REORDER for loading of frames/iframes

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

()

Details

(Keywords: access, fixed1.8, regression)

Attachments

(1 file)

This is an important regression I need to fix for Firefox 1.5. We're not firing the EVENT_REORDER on reloaded frames/iframes.
Attachment #198748 - Flags: review?(parente)
Attachment #198748 - Flags: superreview?(jst)
Flags: blocking1.8rc1?
Comment on attachment 198748 [details] [diff] [review] Allow page load events for frames/iframes sr=jst
Attachment #198748 - Flags: superreview?(jst) → superreview+
Pete -- look at this soon if you can. I'm supposed to be on vacation but this has to get fixed for 1.5 ;)
Attachment #198748 - Flags: review?(parente) → review+
Attachment #198748 - Flags: approval1.8rc1?
Attachment #198748 - Flags: approval1.8rc1? → approval1.8rc1+
Flags: blocking1.8rc1?
Keywords: fixed1.8
So this bug is fixed, right? For trunk and branch, not?
This is fixed.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: