Bug 311430. Not firing EVENT_REORDER for frames/iframes that finish loading. r=parente, sr=jst